# dorkbot

./: README.md  pyproject.toml
src/dorkbot/: blocklist.py
src/dorkbot/indexers/: general.py
