[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dorkbot"
version = "1.10.0+git"
authors = [
    { name = "John Gordon", email = "jgor@utexas.edu" }
]
description = "Command-line tool to scan search results for vulnerabilities"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "http://dorkbot.io"
GitHub = "https://github.com/utiso/dorkbot"

[project.scripts]
dorkbot = "dorkbot.dorkbot:main"

[project.optional-dependencies]
postgresql = [
    "psycopg[binary]>=3.2.13",
]
wapiti = [
    "wapiti3>=3.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
